# forestreeBackEnd

./: Dockerfile  pyproject.toml
forestreeApp/: db.sqlite3  manage.py
forestreeApp/chat/: admin.py  consumers.py  models.py  routing.py  serializer.py
forestreeApp/chat/migrations/: 0001_initial.py
forestreeApp/forestreeApp/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
forestreeApp/webserver/: admin.py  models.py  serializer.py  urls.py  views.py
forestreeApp/webserver/api/: urls.py  views.py
forestreeApp/webserver/migrations/: 0001_initial.py
